feat(vote): Add vote page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Cat Mash" />
     <meta name="author" content="Steven DONGMO" />
     <meta name="keywords" content="Cat, Mash, React, Vite" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#F5F5F5" />
     <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest"/>
 
     <!-- Favicon -->
