feat(devops): setup github actions

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="author" content="Steven DONGMO" />
     <meta name="keywords" content="Cat, Mash, React, Vite" />
     <meta name="theme-color" content="#F5F5F5" />
-    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest"/>
+    <link rel="manifest" href="/site.webmanifest"/>
 
     <!-- Favicon -->
-    <link rel="icon" href="%PUBLIC_URL%/favicon/favicon.ico">
-    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon/favicon-32x32.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon/apple-touch-icon.png">
+    <link rel="icon" href="/favicon/favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
 
     <!-- Using Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
